# hippocampus_common

./: .style.yapf  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
.github/workflows/: yapf_check.yml
config/: barometer_position_default.yaml  bluerov_sensor_poses_default.yaml  camera_pose_default.yaml  hippocampus_sensor_poses_default.yaml
launch/: barometer_gazebo.launch  enu_to_ned.launch  example_localization_gazebo.launch  ground_truth_twist_to_body.launch  hardware_hippo.launch  hippo_offboard.launch  image_decoding.launch  new_ekf.launch  node_tf_publisher.launch  offboard_hippo.launch  offboard_localization.launch  onboard_localization.launch  quat_to_rpy.launch  tf_pose_ros_to_px4.launch  tf_publisher.launch  top_hardware_hippo.launch  top_offboard_distance.launch  top_offboard_localization.launch  top_onboard_localization.launch  top_path_follower.launch  top_twist.launch  top_twist_complete.launch
nodes/: auto_offboard_node  ground_truth_twist_to_body_node  pose_to_rpy_node  quat_to_rpy_node  ranges_debug.py  ranges_debug_node  rpy_to_att_target_node  tf_enu_to_ned_node  tf_pose_ros_to_px4_node  tf_pose_to_ned_node  tf_publisher_node  water_baro_node
resource/: radio_configurator.ui
scripts/: barometer_gazebo.py  configure_radio.py  mavros_local_pos_ENU_to_NED.py  rqt.py  uploader.py
src/hippocampus_common/: ftf.py  ms5803.py  node.py  radio_gui.py  radio_rqt_plugin.py  radio_tools.py  tf_helper.py
