<?xml version="1.0"?>
<package format="2">
    <name>hippocampus_common</name>
    <version>0.0.0</version>
    <description>The hippocampus_common package</description>

    <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>mavros</depend>
    <depend>mavros_msgs</depend>
    <depend>mavros_extras</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
